fix: potential bugs